adjustments to the table componenet

--- a/treasury-movement-simulator/tsconfig.json
+++ b/treasury-movement-simulator/tsconfig.json
@@ -21,7 +21,9 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+
+    "types": ["react", "react-dom"],
   },
   "include": [
     "next-env.d.ts",
